--- a/assets/styles/single.scss
+++ b/assets/styles/single.scss
@@ -106,7 +106,7 @@ article {
 .related-articles-container__inner {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: center;
   gap: 16px;
 }
 
